@@ -450,7 +450,8 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
                 trackChanged = true;
             }
             var artistAndComposer;
-            if (playerStatus.current.composer && playerStatus.current.genre && LMS_COMPOSER_GENRES.has(playerStatus.current.genre)) {
+            if (playerStatus.current.composer && playerStatus.current.genre && LMS_COMPOSER_GENRES.has(playerStatus.current.genre) &&
+                playerStatus.current.composer!=this.playerStatus.current.artist) {
                 artistAndComposer = addPart(playerStatus.current.composer, this.playerStatus.current.artist);
             } else {
                 artistAndComposer = this.playerStatus.current.artist;
